[gd_scene load_steps=8 format=3 uid="uid://c575qb6htwcn2"]

[ext_resource type="Script" path="res://scenes/building_common.gd" id="1_8ejqq"]
[ext_resource type="Texture2D" uid="uid://t2eo71jbjc7u" path="res://assets/buildings.png" id="2_p2u76"]
[ext_resource type="Texture2D" uid="uid://ico1ojqjc20x" path="res://assets/graphics/buttons.png" id="3_y5pw8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lv6vf"]
atlas = ExtResource("2_p2u76")
region = Rect2(72, 12, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_alo4o"]
atlas = ExtResource("3_y5pw8")
region = Rect2(0, 0, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sd0i5"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loeqa"]
size = Vector2(6, 6)

[node name="BuildingRotate" type="Node2D"]
script = ExtResource("1_8ejqq")
operation = "rotate"

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = SubResource("AtlasTexture_lv6vf")

[node name="IconSprite" type="Sprite2D" parent="Visuals"]
modulate = Color(0.94902, 0.65098, 0.368627, 1)
texture = SubResource("AtlasTexture_alo4o")

[node name="LeftArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D_1" type="CollisionShape2D" parent="LeftArea"]
shape = SubResource("RectangleShape2D_sd0i5")

[node name="RightArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D_2" type="CollisionShape2D" parent="RightArea"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_sd0i5")
disabled = true

[node name="BuildingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingArea"]
shape = SubResource("RectangleShape2D_loeqa")

[connection signal="area_entered" from="LeftArea" to="." method="_on_left_area_area_entered"]
[connection signal="area_entered" from="RightArea" to="." method="_on_right_area_area_entered"]
[connection signal="area_exited" from="BuildingArea" to="." method="_on_building_area_area_exited"]
